layout header and jumbatron

--- a/index.html
+++ b/index.html
@@ -14,7 +14,35 @@
 </head>
 
 <body>
+    <!-- HEADER -->
+    <header class="">
+        <!-- HEADER TOP -->
+        <div class="header-top container-fluid">HEADER TOP</div>
+        <!-- HEADER BOTTOM -->
+        <div class="header-bottom container-fluid">HEADER BOTTOM</div>
+    </header>
+    <!-- MAIN -->
+    <main>
+        <!-- JUMBATRON -->
+        <section id="jumbatron">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h1>titolo</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt pariatur dolore deserunt
+                            corrupti
+                            nam. Rem, aperiam nesciunt tempora, voluptate expedita necessitatibus eligendi mollitia
+                            corrupti
+                            ab deleniti tenetur ad vero possimus?</p>
+                        <div>bottone</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="change-card">
 
+        </section>
+    </main>
 </body>
 
 </html>
