section change-card row & col

--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
             </div>
         </section>
         <section id="change-card">
-
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 col-sm-4 col-lg-2">CARD</div>
+                    <div class="col-6 col-sm-4 col-lg-2">CARD</div>
+                    <div class="col-6 col-sm-4 col-lg-2">CARD</div>
+                    <div class="col-6 col-sm-4 col-lg-2">CARD</div>
+                    <div class="col-6 col-sm-4 col-lg-2">CARD</div>
+                    <div class="col-6 col-sm-4 col-lg-2">CARD</div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
