--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- MAIN -->
     <main>
         <!-- JUMBATRON -->
-        <section id="jumbatron">
+        <section id="jumbatron" class="p-5">
             <div class="container">
                 <div class="row">
                     <div class="col">
@@ -39,7 +39,7 @@
                 </div>
             </div>
         </section>
-        <section id="change-card">
+        <section id="change-card" class="p-5 text-center">
             <div class="container">
                 <div class="row">
                     <div class="col-6 col-sm-4 col-lg-2">CARD</div>
@@ -48,6 +48,19 @@
                     <div class="col-6 col-sm-4 col-lg-2">CARD</div>
                     <div class="col-6 col-sm-4 col-lg-2">CARD</div>
                     <div class="col-6 col-sm-4 col-lg-2">CARD</div>
+                </div>
+            </div>
+        </section>
+        <section id="presentation" class="p-5 text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h3>PRE-TITOLO</h3>
+                        <h1>TITOLO</h1>
+                        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi commodi mollitia repellat
+                            nostrum libero asperiores ratione provident quisquam et ipsa eius exercitationem eveniet eos
+                            cum recusandae repudiandae, consequuntur, repellendus ea.</div>
+                    </div>
                 </div>
             </div>
         </section>
