section console (layout)

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 </div>
             </div>
         </section>
+        <!-- CHANGE CARD -->
         <section id="change-card" class="p-5 text-center">
             <div class="container">
                 <div class="row">
@@ -51,6 +52,7 @@
                 </div>
             </div>
         </section>
+        <!-- PRESENTATION -->
         <section id="presentation" class="p-5 text-center">
             <div class="container">
                 <div class="row">
@@ -61,6 +63,21 @@
                             nostrum libero asperiores ratione provident quisquam et ipsa eius exercitationem eveniet eos
                             cum recusandae repudiandae, consequuntur, repellendus ea.</div>
                     </div>
+                </div>
+            </div>
+        </section>
+        <!-- CONSOLE -->
+        <section id="console" class="p-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h1>TITOLO</h1>
+                        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti commodi reprehenderit
+                            voluptates, excepturi aliquam neque totam natus qui minus libero labore quam ea eum eaque
+                            ipsam. Provident ut aliquam praesentium.</div>
+                        BOTTONE
+                    </div>
+                    <div class="col-12 col-lg-6">IMMAGINE PS5</div>
                 </div>
             </div>
         </section>
