section new release section explorer (layout)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- MAIN -->
     <main>
         <!-- JUMBATRON -->
-        <section id="jumbatron" class="p-5">
+        <section class="jumbatron py-5">
             <div class="container">
                 <div class="row">
                     <div class="col">
@@ -40,7 +40,7 @@
             </div>
         </section>
         <!-- CHANGE CARD -->
-        <section id="change-card" class="p-5 text-center">
+        <section id="change-card" class="py-5 text-center">
             <div class="container">
                 <div class="row">
                     <div class="col-6 col-sm-4 col-lg-2">CARD</div>
@@ -53,11 +53,11 @@
             </div>
         </section>
         <!-- PRESENTATION -->
-        <section id="presentation" class="p-5 text-center">
+        <section id="presentation" class="py-5 text-center">
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <h3>PRE-TITOLO</h3>
+                        <h6>PRE-TITOLO</h6>
                         <h1>TITOLO</h1>
                         <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi commodi mollitia repellat
                             nostrum libero asperiores ratione provident quisquam et ipsa eius exercitationem eveniet eos
@@ -67,7 +67,7 @@
             </div>
         </section>
         <!-- CONSOLE -->
-        <section id="console" class="p-5">
+        <section id="console" class="py-5">
             <div class="container">
                 <div class="row">
                     <div class="col">
@@ -78,6 +78,130 @@
                         BOTTONE
                     </div>
                     <div class="col-12 col-lg-6">IMMAGINE PS5</div>
+                </div>
+            </div>
+        </section>
+        <!-- ACCESSORIES -->
+        <section id="accessories" class="py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4 col-md-2">FOTO</div>
+                    <div class="col-4 col-md-2">FOTO</div>
+                    <div class="col-4 col-md-2">FOTO</div>
+                    <div class="col-4 col-md-2">FOTO</div>
+                    <div class="col-4 col-md-2">FOTO</div>
+                </div>
+            </div>
+        </section>
+        <!-- JUMBATRON -->
+        <section class="jumbatron py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h1>titolo</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt pariatur dolore deserunt
+                            corrupti
+                            nam. Rem, aperiam nesciunt tempora, voluptate expedita necessitatibus eligendi mollitia
+                            corrupti
+                            ab deleniti tenetur ad vero possimus?</p>
+                        <div>bottone</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- NEW RELEASES -->
+        <section id="new-releases">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h2>Titolo</h2>
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt mollitia magnam explicabo
+                            quidem officiis magni necessitatibus quis? Expedita id atque, ut, omnis sit magnam qui,
+                            inventore maiores nostrum soluta facere.</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div>immagine</div>
+                        <div>testo</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div>immagine</div>
+                        <div>testo</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div>immagine</div>
+                        <div>testo</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div>immagine</div>
+                        <div>testo</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div>immagine</div>
+                        <div>testo</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div>immagine</div>
+                        <div>testo</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div>immagine</div>
+                        <div>testo</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div>immagine</div>
+                        <div>testo</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div>immagine</div>
+                        <div>testo</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div>immagine</div>
+                        <div>testo</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div>immagine</div>
+                        <div>testo</div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div>immagine</div>
+                        <div>testo</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- EXPLORER -->
+        <section id="explorer" class="py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center">
+                        <h1>Titolo</h1>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem quibusdam ducimus quos
+                            fugit. Quidem ipsa commodi atque dolores repellendus unde quia ex adipisci animi corrupti
+                            est numquam vel, id sequi!</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <div>immagine</div>
+                        <h2>titolo</h2>
+                        <div>testo</div>
+                        <div>bottone</div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div>immagine</div>
+                        <h2>titolo</h2>
+                        <div>testo</div>
+                        <div>bottone</div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div>immagine</div>
+                        <h2>titolo</h2>
+                        <div>testo</div>
+                        <div>bottone</div>
+                    </div>
                 </div>
             </div>
         </section>
