section new sales jumbatron

--- a/index.html
+++ b/index.html
@@ -205,6 +205,60 @@
                 </div>
             </div>
         </section>
+        <!-- JUMBATRON -->
+        <section class="jumbatron py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h1>titolo</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt pariatur dolore deserunt
+                            corrupti
+                            nam. Rem, aperiam nesciunt tempora, voluptate expedita necessitatibus eligendi mollitia
+                            corrupti
+                            ab deleniti tenetur ad vero possimus?</p>
+                        <div>bottone</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- NEW SALES -->
+        <section id="new-sales">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h1>Titolo</h1>
+                        <div>testo</div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <div>Immagine</div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div>Immagine</div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div>Immagine</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- JUMBATRON -->
+        <section class="jumbatron py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h1>titolo</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt pariatur dolore deserunt
+                            corrupti
+                            nam. Rem, aperiam nesciunt tempora, voluptate expedita necessitatibus eligendi mollitia
+                            corrupti
+                            ab deleniti tenetur ad vero possimus?</p>
+                        <div>bottone</div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
