--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             </div>
         </section>
         <!-- NEW SALES -->
-        <section id="new-sales">
+        <section id="new-sales" class="py-5">
             <div class="container">
                 <div class="row">
                     <div class="col">
@@ -255,6 +255,30 @@
                             corrupti
                             ab deleniti tenetur ad vero possimus?</p>
                         <div>bottone</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- SOCIAL -->
+        <section id="social" class="py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h2>Titolo</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 col-sm-3">
+                        logo
+                    </div>
+                    <div class="col-6 col-sm-3">
+                        logo
+                    </div>
+                    <div class="col-6 col-sm-3">
+                        logo
+                    </div>
+                    <div class="col-6 col-sm-3">
+                        logo
                     </div>
                 </div>
             </div>
