--- a/index.html
+++ b/index.html
@@ -284,6 +284,34 @@
             </div>
         </section>
     </main>
+    <!-- FOOTER -->
+    <footer class="py-5">
+        <div class="container-fluid py-2">
+            <div class="row">
+                <div class="col">
+                    <div>logo</div>
+                    <div>Icona e testo</div>
+                </div>
+            </div>
+        </div>
+        <div class="container py-2">
+            <div class="row">
+                <div class="col-12 col-md-4">footer</div>
+                <div class="col-12 col-md-4">footer</div>
+                <div class="col-12 col-md-4">footer</div>
+            </div>
+        </div>
+        <div class="container-fluid py-2">
+            <div class="row">
+                <div class="col">
+                    <div>logo</div>
+                    <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, veritatis facere. Totam,
+                        praesentium officiis, porro corrupti sint possimus alias mollitia excepturi, necessitatibus ad
+                        at! Iusto veniam accusantium porro debitis explicabo?</div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
