header-top add bc-g and logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <!-- HEADER -->
     <header class="">
         <!-- HEADER TOP -->
-        <div class="header-top container-fluid">HEADER TOP</div>
+        <div class="header-top container-fluid bg-black text-end d-flex justify-content-end">
+            <img id="header-logo" class="img-fluid" src="img/sony_logo.svg" alt="">
+        </div>
         <!-- HEADER BOTTOM -->
         <div class="header-bottom container-fluid">HEADER BOTTOM</div>
     </header>
