--- a/index.html
+++ b/index.html
@@ -34,42 +34,42 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link text-black fw-bold fs-4 active" aria-current="page"
+                                    <a class="nav-link text-black fw-bold fs-5 active" aria-current="page"
                                         href="#">Giochi
-                                        <img id="arrow-down" src="img/chevron-down-solid.svg" alt=""></a>
+                                        <img class="arrow-down" src="img/chevron-down-solid.svg" alt=""></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-black fw-bold fs-4 active" aria-current="page"
+                                    <a class="nav-link text-black fw-bold fs-5 active" aria-current="page"
                                         href="#">Hardware
-                                        <img id="arrow-down" src="img/chevron-down-solid.svg" alt=""></a>
+                                        <img class="arrow-down" src="img/chevron-down-solid.svg" alt=""></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-black fw-bold fs-4 active" aria-current="page"
+                                    <a class="nav-link text-black fw-bold fs-5 active" aria-current="page"
                                         href="#">Servizi
-                                        <img id="arrow-down" src="img/chevron-down-solid.svg" alt=""></a>
+                                        <img class="arrow-down" src="img/chevron-down-solid.svg" alt=""></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-black fw-bold fs-4 active" aria-current="page"
+                                    <a class="nav-link text-black fw-bold fs-5 active" aria-current="page"
                                         href="#">Novit&agrave;
-                                        <img id="arrow-down" src="img/chevron-down-solid.svg" alt=""></a>
+                                        <img class="arrow-down" src="img/chevron-down-solid.svg" alt=""></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-black fw-bold fs-4 active" aria-current="page" href="#">Fai
+                                    <a class="nav-link text-black fw-bold fs-5 active" aria-current="page" href="#">Fai
                                         acquisti
-                                        <img id="arrow-down" src="img/chevron-down-solid.svg" alt=""></a>
+                                        <img class="arrow-down" src="img/chevron-down-solid.svg" alt=""></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-black fw-bold fs-4 active" aria-current="page"
+                                    <a class="nav-link text-black fw-bold fs-5 active" aria-current="page"
                                         href="#">Supporto
-                                        <img id="arrow-down" src="img/chevron-down-solid.svg" alt=""></a>
+                                        <img class="arrow-down" src="img/chevron-down-solid.svg" alt=""></a>
                                 </li>
                             </ul>
                             <div class="d-flex">
-                                <a class="nav-link text-black fw-bold fs-4 active" aria-current="page" href="#">My
+                                <a class="nav-link text-black fw-bold fs-5 active" aria-current="page" href="#">My
                                     Playstation
-                                    <img id="arrow-down" src="img/chevron-down-solid.svg" alt=""></a>
+                                    <img class="arrow-down" src="img/chevron-down-solid.svg" alt=""></a>
                                 <button class="btn btn-dark rounded-pill fs-4 mx-3" type="submit">Search</button>
-                                <img id="lens" role="button" src="img/lens.svg" alt="">
+                                <img id="lens" src="img/lens.svg" alt="">
                             </div>
                         </div>
                     </div>
@@ -79,10 +79,10 @@
         <!-- MAIN -->
         <main class="">
             <!-- JUMBATRON -->
-            <section class="jumbatron jumbo jumbo-shop py-5 text-white d-flex flex-column justify-content-end">
+            <section class="jumbatron jumbo-shop py-5 text-white">
                 <div class="container">
                     <div class="row">
-                        <div class="col">
+                        <div class="col pt-150">
                             <figure class="w-50">
                                 <img class="img-fluid" src="img/returnal-hero-banner-logo.png" alt="">
                             </figure>
@@ -173,30 +173,37 @@
             <!-- ACCESSORIES -->
             <section id="accessories" class="py-1">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-4 col-md-2">
+                    <div class="row pb-5">
+                        <div class="col-4 col-md-2 border-blue">
                             <figure>
                                 <img class="img-fluid" src="img/playstation-5-thumb.png" alt="">
+                                <figcaption class="text-center d-none d-md-block">Console PS5</figcaption>
                             </figure>
                         </div>
-                        <div class="col-4 col-md-2">
+                        <div class="col-4 col-md-2 opacity-50">
                             <figure>
                                 <img class="img-fluid" src="img/joypad-thumb.png" alt="">
+                                <figcaption class="text-center d-none d-md-block">Controller wireless DualSense&trade;
+                                </figcaption>
                             </figure>
                         </div>
-                        <div class="col-4 col-md-2">
+                        <div class="col-4 col-md-2 opacity-50">
                             <figure>
                                 <img class="img-fluid" src="img/headset-thumb.png" alt="">
+                                <figcaption class="text-center d-none d-md-block">Cuffie wireless con microfono PULSE
+                                    3&trade;</figcaption>
                             </figure>
                         </div>
-                        <div class="col-4 col-md-2">
+                        <div class="col-4 col-md-2 opacity-50">
                             <figure>
                                 <img class="img-fluid" src="img/remote-thumb.png" alt="">
+                                <figcaption class="text-center d-none d-md-block">Telecomando Media</figcaption>
                             </figure>
                         </div>
-                        <div class="col-4 col-md-2">
+                        <div class="col-4 col-md-2 opacity-50">
                             <figure>
                                 <img class="img-fluid" src="img/camera-thumb.jpg" alt="">
+                                <figcaption class="text-center d-none d-md-block">Telecamera HD</figcaption>
                             </figure>
                         </div>
 
@@ -204,7 +211,7 @@
                 </div>
             </section>
             <!-- JUMBATRON -->
-            <section class="jumbatron jumbo jumbo-adventure py-5 text-white d-flex flex-column justify-content-end">
+            <section class="jumbatron jumbo-adventure py-5 text-white d-flex flex-column justify-content-end">
                 <div class="container">
                     <div class="row">
                         <div class="col">
@@ -375,113 +382,174 @@
                 </div>
             </section>
             <!-- JUMBATRON -->
-            <section class="jumbatron jumbo py-5 d-flex flex-column justify-content-center bg-grey">
+            <section class="jumbatron bg-grey ">
                 <div class="container">
                     <div class="row">
-                        <div class="col">
+                        <div class="col-12 col-md-6 p-90">
                             <figure class="w-75">
                                 <img class="img-fluid" src="img/ps-plus-logo.png" alt="">
                             </figure>
                             <div class="">
-                                <h1>Un'avventura cooperativa selvaggia ti attende</h1>
-                                <p>Trova un amico e partite insieme per l'avventura pi&ugrave; folle delle vostre vite
-                                    in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo
-                                    genere.</p>
+                                <p>Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi
+                                    mensili, sconti esclusivi e altro ancora.</p>
                                 <button type="button" class="btn rounded-pill bg-light-grey text-blue">Esplora
                                     PlayStation Plus</button>
                             </div>
+                        </div>
+                        <div class="col-md-6 d-none d-md-block">
+                            <figure class="h-100">
+                                <img src="img/ps-plus-april-monthly-games-featured-image-block.png"
+                                    class="img-fluid h-100" alt="">
+                            </figure>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- NEW SALES -->
-            <section id="new-sales" class="py-5">
+            <section id="new-sales" class="py-5 text-center">
                 <div class="container">
-                    <div class="row">
+                    <div class="row pb-3">
                         <div class="col">
-                            <h1>Titolo</h1>
-                            <div>testo</div>
+                            <h1>Nuovi sconti sul PlayStation Store</h1>
+                            <p class="text-secondary">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4
+                                e PS VR, tutti in un unico posto.</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-12 col-md-4">
-                            <div>Immagine</div>
+                            <figure>
+                                <img class="img-fluid" src="img/playstation-store-games-under-20-spotlight.jpg" alt="">
+                            </figure>
                         </div>
                         <div class="col-12 col-md-4">
-                            <div>Immagine</div>
+                            <figure>
+                                <img class="img-fluid" src="img/playstation-store-golden-week-sale-spotlight.jpg"
+                                    alt="">
+                            </figure>
                         </div>
                         <div class="col-12 col-md-4">
-                            <div>Immagine</div>
+                            <figure>
+                                <img class="img-fluid" src="img/playstation-store-free-to-play-spotlight.png" alt="">
+                            </figure>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- JUMBATRON -->
-            <section class="jumbatron py-5">
+            <section class="jumbatron bg-dark-blue text-white ">
                 <div class="container">
                     <div class="row">
-                        <div class="col">
-                            <h1>titolo</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt pariatur dolore deserunt
-                                corrupti
-                                nam. Rem, aperiam nesciunt tempora, voluptate expedita necessitatibus eligendi mollitia
-                                corrupti
-                                ab deleniti tenetur ad vero possimus?</p>
-                            <div>bottone</div>
+                        <div class="col-12 col-md-6 p-90">
+                            <figure class="w-75">
+                                <img class="img-fluid" src="img/ps-plus-logo.png" alt="">
+                            </figure>
+                            <div class="">
+                                <p>Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4,
+                                    PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
+                                <button type="button" class="btn rounded-pill bg-light-grey text-black">Esplora
+                                    PlayStation Plus</button>
+                            </div>
+                        </div>
+                        <div class="col-md-6 d-none d-md-block">
+                            <figure class="h-100">
+                                <img src="img/ps-now-april-featured-image-block.png" alt="" class="img-fluid h-100">
+                            </figure>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- SOCIAL -->
-            <section id="social" class="py-5">
+            <section id="social" class="py-5 text-center">
                 <div class="container">
                     <div class="row">
-                        <div class="col">
-                            <h2>Titolo</h2>
+                        <div class="col pb-5">
+                            <h2 class="h1">Seguici sui social media</h2>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-6 col-sm-3">
-                            logo
+                            <figure>
+                                <img class="img-fluid" src="img/twitter.jpg" alt="">
+                            </figure>
                         </div>
                         <div class="col-6 col-sm-3">
-                            logo
+                            <figure>
+                                <img class="img-fluid" src="img/facebook.jpg" alt="">
+                            </figure>
                         </div>
                         <div class="col-6 col-sm-3">
-                            logo
+                            <figure>
+                                <img class="img-fluid" src="img/instagram.jpg" alt="">
+                            </figure>
                         </div>
                         <div class="col-6 col-sm-3">
-                            logo
+                            <figure>
+                                <img class="img-fluid" src="img/youtube.png" alt="">
+                            </figure>
                         </div>
                     </div>
                 </div>
             </section>
         </main>
         <!-- FOOTER -->
-        <footer class="py-5">
+        <footer class="py-5 bg-blue text-white">
             <div class="container-fluid py-2">
                 <div class="row">
                     <div class="col">
-                        <div>logo</div>
-                        <div>Icona e testo</div>
+                        <figure>
+                            <img class="img-fluid" src="img/ps-footer.svg" alt="">
+                        </figure>
+                        <div class="d-flex align-items-center">
+                            <img id="globe" class="img-fluid me-2" src="img/language-globe.svg" alt="">
+                            <span>Country/Region: Italy</span>
+                        </div>
+
                     </div>
                 </div>
             </div>
             <div class="container py-2">
                 <div class="row">
-                    <div class="col-12 col-md-4">footer</div>
-                    <div class="col-12 col-md-4">footer</div>
-                    <div class="col-12 col-md-4">footer</div>
+                    <div class="col-12 col-md-4">
+                        <ul class="list-unstyled">
+                            <li>Link footer n</li>
+                            <li>Link footer n</li>
+                            <li>Link footer n</li>
+                            <li>Link footer n</li>
+                            <li>Link footer n</li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <ul class="list-unstyled">
+                            <li>Link footer n</li>
+                            <li>Link footer n</li>
+                            <li>Link footer n</li>
+                            <li>Link footer n</li>
+                            <li>Link footer n</li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <ul class="list-unstyled">
+                            <li>Link footer n</li>
+                            <li>Link footer n</li>
+                            <li>Link footer n</li>
+                            <li>Link footer n</li>
+                            <li>Link footer n</li>
+                        </ul>
+                    </div>
+
                 </div>
             </div>
             <div class="container-fluid py-2">
                 <div class="row">
                     <div class="col">
-                        <div>logo</div>
-                        <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, veritatis facere. Totam,
-                            praesentium officiis, porro corrupti sint possimus alias mollitia excepturi, necessitatibus
-                            ad
-                            at! Iusto veniam accusantium porro debitis explicabo?</div>
+                        <figure>
+                            <img id="sie-logo" class="img-fluid" src="img/sie-logo.svg" alt="">
+                        </figure>
+                        <p>Website &copy;2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi
+                            dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini
+                            associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi
+                            proprietari. Tutti i diritti riservati. <span class="text-decoration-underline">Maggiori
+                                info</span> </p>
                     </div>
                 </div>
             </div>
