--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
         <footer class="py-5 bg-blue text-white">
             <div class="container-fluid py-2">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-12 col-lg-6">
                         <figure>
                             <img class="img-fluid" src="img/ps-footer.svg" alt="">
                         </figure>
@@ -503,13 +503,8 @@
                             <img id="globe" class="img-fluid me-2" src="img/language-globe.svg" alt="">
                             <span>Country/Region: Italy</span>
                         </div>
-
                     </div>
-                </div>
-            </div>
-            <div class="container py-2">
-                <div class="row">
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-4 col-lg-2">
                         <ul class="list-unstyled">
                             <li>Link footer n</li>
                             <li>Link footer n</li>
@@ -518,7 +513,7 @@
                             <li>Link footer n</li>
                         </ul>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-4 col-lg-2">
                         <ul class="list-unstyled">
                             <li>Link footer n</li>
                             <li>Link footer n</li>
@@ -527,7 +522,7 @@
                             <li>Link footer n</li>
                         </ul>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-4 col-lg-2">
                         <ul class="list-unstyled">
                             <li>Link footer n</li>
                             <li>Link footer n</li>
@@ -536,12 +531,11 @@
                             <li>Link footer n</li>
                         </ul>
                     </div>
-
                 </div>
             </div>
             <div class="container-fluid py-2">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-12 col-lg-6">
                         <figure>
                             <img id="sie-logo" class="img-fluid" src="img/sie-logo.svg" alt="">
                         </figure>
